--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body
 {
+  background-image: url(hatter.jpg);
   font-family: sans-serif;
   background-attachment: fixed;
   background-size: cover;
@@ -56,13 +57,43 @@ p.imgtitle
   line-height: 130%;
 }
 
-table
+table, th,td
 {
+  border-collapse: collapse;
+  padding: 15px;
   border: 3px solid #0A82F7;
+}
+th,td
+{
+  border: 1px solid black;
+  text-align: center;
+}
+
+th
+{
+  background-color: #0A82F7;
+  color:white;
 }
 
 table
 {
   margin-right: 20px;
   background-color: rgba(227, 225, 233, 0.3);
+}
+
+span
+{
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+}
+
+a
+{
+  color: black;
+  text-decoration: none;
+}
+
+a:hover
+{
+  color:yellow;
 }
